# AI-Email-Summarizer

./: README.md
crew-email-summarizer/: main.py  pyproject.toml  requirement.txt  streamlit_app.py
crew-email-summarizer/agents/: __init__.py  reviewer_agent.py  summarizer_agent.py
crew-email-summarizer/src/crew_email_summarizer/: __init__.py
crew-email-summarizer/tools/: __init__.py  feedback_tool.py  summarizer_tool.py
